Ensure hero image covers full width

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,6 +116,7 @@ footer {
 #patrick-street {
   /* Specify the height of the image */
   height: 65%;
+  width: 100vw;
 
   /* Display as cover to prevent distorting aspect ratio */
   object-fit: cover;
